[gd_scene load_steps=5 format=3 uid="uid://bluuefjjcnfh4"]

[ext_resource type="Script" path="res://script/menu pause/menu_pause.gd" id="1_jqwhs"]
[ext_resource type="FontFile" uid="uid://g165ow287dwf" path="res://font/Oswald-Regular.ttf" id="2_sw22l"]
[ext_resource type="AudioStream" uid="uid://b3fidng2l6ypf" path="res://sons/effets_sonores/selection.MP3" id="3_tcl47"]
[ext_resource type="AudioStream" uid="uid://d050cbfesnpfl" path="res://sons/effets_sonores/survolement .MP3" id="4_pp7ub"]

[node name="pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_left = -443.0
offset_top = -239.0
offset_right = 478.0
offset_bottom = 223.0
script = ExtResource("1_jqwhs")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 919.0
offset_bottom = 460.0
color = Color(0, 0, 0, 0.772549)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 36.0
offset_top = 5.0
offset_right = 870.0
offset_bottom = 431.0

[node name="label_pause" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_sw22l")
theme_override_font_sizes/font_size = 45
text = "PAUSE
"
horizontal_alignment = 1

[node name="btn_continuer" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CONTINUER"

[node name="btn_quitter" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "MENU PRINCIPAL
"

[node name="audio_selection" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_tcl47")

[node name="audio_survolement" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_pp7ub")

[connection signal="mouse_entered" from="VBoxContainer/btn_continuer" to="." method="_on_btn_continuer_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/btn_continuer" to="." method="_on_btn_continuer_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/btn_quitter" to="." method="_on_btn_quitter_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/btn_quitter" to="." method="_on_btn_quitter_pressed"]
